# transformers-examples

assignments/: Assignment_1.ipynb  pyproject.toml
bitsnpieces/: optimize-squared.ipynb
notebook-env/: README.md
simple-linear/: gaussians.py  simple-linear.ipynb
