[tool.poetry]
name = "notebook-env"
version = "0.1.0"
description = ""
authors = ["Daniël de Kok <me@danieldk.eu>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
torch = "^1.8.1"
numpy = "^1.20.2"
jupyterlab = "^3.0.14"
transformers = "^4.5.1"
datasets = "^1.6.0"
matplotlib = "^3.4.1"
ipywidgets = "^7.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
